test/errors/filescope1.input.asm

* = $801

!filescope foo ; not allowed, must be at the beginning of a file
